# horus-web-server

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
application/: meson.build
application/src/: main.cpp
server/: meson.build
server/include/: connection.hpp  connection_manager.hpp  logger.hpp  network.hpp  server.hpp
server/include/http/: common.hpp  header.hpp  request.hpp  request_handler.hpp  request_parser.hpp  response.hpp
server/include/utils/: path.hpp  platform_detection.hpp
server/share/horus-www/: index.html
server/share/horus-www/css/: main.css
server/share/horus-www/js/: main.js
server/src/: connection.cpp  connection_manager.cpp  logger.cpp  main.cpp  server.cpp
server/src/http/: request_handler.cpp  request_parser.cpp
server/src/utils/: path.cpp
server/tests/: meson.build
server/tests/src/utils/: path.cpp
subprojects/: asio.wrap  cxxopts.wrap
subprojects/packagefiles/asio-patch/: meson.build
subprojects/packagefiles/cxxopts-patch/: meson.build
